--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "element-plus": "^1.0.2-beta.46",
     "fuse.js": "^6.4.6",
     "lodash": "^4.17.21",
-    "vue": "^3.0.5"
+    "rison": "^0.1.1",
+    "vue": "^3.0.5",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
