--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "copy-to-clipboard": "^3.3.1",
     "element-plus": "^1.0.2-beta.46",
     "firebase": "9.0.0-beta.2",
     "fuse.js": "^6.4.6",
